manifests/aws/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Forecastle"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/stakater/Forecastle/master/assets/web/forecastle-round-100px.png"
  name: forecastle
  namespace: ingress-nginx
spec:
  rules:
  - host: forecastle.aws.fury
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: forecastle
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Cerebro"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/cerebro.png"
  name: cerebro
  namespace: logging
spec:
  rules:
  - host: cerebro.aws.fury
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cerebro
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Kibana"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/kibana.png"
  name: kibana
  namespace: logging
spec:
  rules:
  - host: kibana.aws.fury
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kibana
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Grafana"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/grafana.png"
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.aws.fury
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: grafana
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Prometheus"
    forecastle.stakater.com/icon: "https://github.com/stakater/ForecastleIcons/raw/master/prometheus.png"
  namespace: monitoring
  name: prometheus
spec:
  rules:
    - host: prometheus.aws.fury
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: prometheus-k8s
              port:
                name: web
---
